--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 VITE_API_URL=https://codespaces-ca0ad0-8000.app.github.dev
-VITE_ANOTHER_API_URL=https://fantastic-space-cod-5g57gw9764p9374gr-5173.app.github.dev/
+ALLOWED_ORIGINS=https://automatic-barnacle-97wg7pxgvq5whpw9x-5173.app.github.dev
